--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@tabler/icons-react": "^3.34.0",
+    "@vapi-ai/server-sdk": "^0.9.1",
     "@vapi-ai/web": "^2.3.5",
     "ai": "^4.3.16",
     "class-variance-authority": "^0.7.1",
