--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@vapi-ai/server-sdk": "^0.9.1",
     "@vapi-ai/web": "^2.3.6",
     "ai": "^4.3.16",
+    "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.513.0",
